--- a/css/style-index.css
+++ b/css/style-index.css
@@ -9,12 +9,22 @@ body {
     text-align: center;
 }
 
-h2 {
+.container-nav {
     text-align: center;
     font-variant: all-petite-caps;
     background: #ffffff;
     padding: 17px;
     box-shadow: 0px 0px 11px 0px #e8e8e8;
+}
+
+.img-logout {
+    margin-left: 180px;
+    height: 40px;
+    width: 40px;
+}
+
+.txt-margin {
+    margin-right: 410px;
 }
 
 .des-img {
