--- a/css/style-login.css
+++ b/css/style-login.css
@@ -26,7 +26,7 @@ body {
 
 .form-per {
     background: #ffffff;
-    padding: 40px;
+    padding: 70px;
     display: inline-grid;
     box-shadow: 0px 0px 11px 0px #e8e8e8;
     border-radius: 20px;
@@ -36,13 +36,14 @@ body {
     margin-top: 18px;
     border: none;
     background: #f7f5f5;
-    border-radius: 20px;
+    border-radius: 5px;
     padding-left: 10px;
+    height: 40px;
 }
 
 .form-per input[type="submit"] {
     background: #000;
-    color: #f7f5f5;
+    color: #a19a9a;
     transition: 0.2s;
 }
 
